k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chrono-synth-os
  namespace: chrono-synth
  labels:
    app.kubernetes.io/name: chrono-synth-os
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chrono-synth-os
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
